finish intro-section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,7 +6,7 @@
 @use 'components/mixins';
 @use 'components/typography';
 
-// IMPORT THE COMPONENTS
+// IMPORT THE SECTIONS
 @use 'sections/navbar';
 @use 'sections/intro-section';
 @use 'sections/companies';
