--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -11,6 +11,7 @@
   margin: 0;
   border: 0.1rem solid rgba($white, 0.6);
   background-color: $white;
+  white-space: nowrap;
 
   span {
     position: absolute;
